nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: proj-app
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  namespace: proj-app
  labels:
    app: backend
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30081
    protocol: TCP
  selector:
    app: backend
